--- a/index.html
+++ b/index.html
@@ -44,11 +44,46 @@
         <div>
             <img src="./assets/img/Folder v8 Open 1.png" alt="Большая картинка">
             <h2>Максимальная белизна</h2>
-            <p>Для повышения белизны, гладкости и мягкости в состав бумажной массы вводят белые минеральные вещества: мел, тальк, каолин и др. Эта операция называется наполнением.</p>
-            <p>Отлив бумажного листа осуществляют на бумагоделательной машине, важнейшей частью которой является непрерывно движущаяся (как транспортер) металлическая или капроновая сетка.</p>
+            <p>Для повышения белизны, гладкости и мягкости в состав бумажной массы вводят белые минеральные вещества:
+                мел, тальк, каолин и др. Эта операция называется наполнением.</p>
+            <p>Отлив бумажного листа осуществляют на бумагоделательной машине, важнейшей частью которой является
+                непрерывно движущаяся (как транспортер) металлическая или капроновая сетка.</p>
         </div>
     </section>
-    <section></section>
+    <section>
+        <div>
+            <img src="./assets/img/Frame 208.png" alt="Упаковка">
+            <h3>Упаковка</h3>
+            <span>Тираж: от 50 штук</span>
+            <p>Сделано из крафт-бумаги или плотного картона. Упаковки имеют различные формы и расцветки, изготовим форму
+                под заказ.</p>
+            <button>Подробнее<img src="./assets/img/Arrow 1.svg"></button>
+        </div>
+        <div>
+            <img src="./assets/img/Frame 209.png" alt="Пакеты">
+            <h3>Пакеты</h3>
+            <span>Тираж: от 200 штук</span>
+            <p>С прямоугольным дном. От 10 см до 60 см по высоте. Материалы: картон, крафт-бумага. Различные расцветки
+                и дизайн.</p>
+            <button>Подробнее<img src="./assets/img/Arrow 1.svg"></button>
+        </div>
+        <div>
+            <img src="./assets/img/Frame 211.png" alt="Кейсы">
+            <h3>Кейсы</h3>
+            <span>Тираж: от 30 штук</span>
+            <p>Подойдет для документов и других бумаг. Различные расцветки, размеры и плотность. Материал: прессованная
+                бумага.</p>
+            <button>Подробнее<img src="./assets/img/Arrow 1.svg"></button>
+        </div>
+        <div>
+            <img src="./assets/img/Frame 210.png" alt="Другие изделия">
+            <h3>Другие изделия</h3>
+            <span>Тираж: от 100 штук</span>
+            <p>Нестандартные упаковки, кейсы и другие изделия различных размеров и конфигураций. Изготовим в кратчайшие
+                сроки.</p>
+            <button>Подробнее<img src="./assets/img/Arrow 1.svg"></button>
+        </div>
+    </section>
     <section></section>
     <section></section>
     <footer></footer>
