--- a/index.html
+++ b/index.html
@@ -84,7 +84,28 @@
             <button>Подробнее<img src="./assets/img/Arrow 1.svg"></button>
         </div>
     </section>
-    <section></section>
+    <section>
+        <div>
+            <div>
+                <img src="./assets/img/hahnemuehle-logo-vector 1.png" alt="Картинка-1">
+            </div>
+        </div>
+        <div>
+            <div>
+                <img src="./assets/img/Frame 225.png" alt="Картинка-2">
+            </div>
+        </div>
+        <div>
+            <div>
+                <img src="./assets/img/royal-talens-bv-logo-vector 1.png" alt="Картинка-3">
+            </div>
+        </div>
+        <div>
+            <div>
+                <img src="./assets/img/Frame.png" alt="Картинка-4">
+            </div>
+        </div>
+    </section>
     <section></section>
     <footer></footer>
 </body>
