--- a/index.html
+++ b/index.html
@@ -106,8 +106,23 @@
             </div>
         </div>
     </section>
-    <section></section>
-    <footer></footer>
+    <section>
+        <div>
+            <h2>Simple скетчбук</h2>
+            <p>80 листов, твердая обложка, бумага  Fabriano 200 г/м2. Подойдет и для графики и для акварели. Для самых смелых творческих замыслов!</p>
+            <button>Купить</button>
+        </div>
+        <img src="./assets/img/pic.png" alt="Скэтчбук">
+    </section>
+    <footer>
+        <img src="./assets/img/Frame 85.svg" alt="logo">
+        <ul>
+            <li><a href=""><img src="./assets/img/Vector-4.svg"></a></li>
+            <li><a href=""><img src="./assets/img/Vector.svg"></a></li>
+            <li><a href=""><img src="./assets/img/Vector-2.svg"></a></li>
+            <li><a href=""><img src="./assets/img/Vector-3.svg"></a></li>
+        </ul>
+    </footer>
 </body>
 
 </html>
