--- a/index.html
+++ b/index.html
@@ -5,99 +5,111 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+        rel="stylesheet">
+
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <header>
-        <img src="./assets/img/Frame 85.svg" alt="logo">
+    <header class="header">
+        <img src="./assets/img/Frame85.svg" alt="logo">
         <ul>
-            <li><a href="">Продукция</a></li>
-            <li><a href="">Материалы</a></li>
-            <li><a href="">О нас</a></li>
-            <li><a href="">Контакты</a></li>
+            <li><a class="header-link" href="">Продукция</a></li>
+            <li><a class="header-link" href="">Материалы</a></li>
+            <li><a class="header-link" href="">О нас</a></li>
+            <li><a class="header-link" href="">Контакты</a></li>
         </ul>
     </header>
-    <section>
-        <div>
-            <h1>Простые вещи. Из бумаги</h1>
-            <h2>Бума́га (предположительно от итал. bombagia, первоисточником же считается иранский) — волокнистый
-                материал с минеральными добавками.</h2>
-            <button>Каталог</button>
-        </div>
-        <img src="./assets/img/Layer 2 copy.png" alt="Картинка">
+    <section class="section-1">
+        <h1 class="h1">Простые вещи. <br> Из бумаги</h1>
+        <p class="text">Бума́га (предположительно от итал. bombagia, первоисточником же считается иранский) —
+            волокнистый материал с минеральными добавками.</p>
+        <button class="header-button">Каталог</button>
+        <img class="img-section-1" src="./assets/img/Layer2copy.png" alt="Картинка">
     </section>
-    <section>
-        <div>
-            <div>
-                <img src="./assets/img/Buissnes Cards v2 (85x55).png" alt="Бизнес-карточка-1">
-                <span>V.1 Результат вашего обучения</span>
+    <section class="section-2">
+        <div class="top-section">
+            <div class="section-list">
+                <img class="section-img" src="./assets/img/BuissnesCardsv2(85x55).png" alt="Бизнес-карточка-1">
+                <span class="main-span">V.1</span>
+                <span class="title-span">Результат вашего обучения</span>
             </div>
-            <div>
-                <img src="./assets/img/Buissnes Cards v6 (85x55) 1.png" alt="Бизнес-карточка-2">
-                <span>V.2 Результат вашего обучения</span>
+            <div class="section-list">
+                <img class="section-img" src="./assets/img/BuissnesCardsv6(85x55)1.png" alt="Бизнес-карточка-2">
+                <span class="main-span">V.2</span>
+                <span class="title-span">Результат вашего обучения</span>
             </div>
-            <div>
-                <img src="./assets/img/Buissnes Cards v5 (85x55) 1.png" alt="Бизнес-карточка-3">
-                <span>V.3 Результат вашего обучения</span>
+            <div class="section-list">
+                <img class="section-img" src="./assets/img/BuissnesCardsv5(85x55)1.png" alt="Бизнес-карточка-3">
+                <span class="main-span">V.3</span>
+                <span class="title-span">Результат вашего обучения</span>
             </div>
         </div>
         <div>
-            <img src="./assets/img/Folder v8 Open 1.png" alt="Большая картинка">
-            <h2>Максимальная белизна</h2>
-            <p>Для повышения белизны, гладкости и мягкости в состав бумажной массы вводят белые минеральные вещества:
-                мел, тальк, каолин и др. Эта операция называется наполнением.</p>
-            <p>Отлив бумажного листа осуществляют на бумагоделательной машине, важнейшей частью которой является
-                непрерывно движущаяся (как транспортер) металлическая или капроновая сетка.</p>
+            <img class="section-main-img" src="./assets/img/Folderv8Open1.png" alt="Большая картинка">
+            <h2 class="h2">Максимальная белизна</h2>
+            <p class="text">
+                Для повышения белизны, гладкости и мягкости в состав бумажной массы вводят белые минеральные вещества:
+                мел, тальк, каолин и др. Эта операция называется наполнением.
+                <br>
+                Отлив бумажного листа осуществляют на бумагоделательной машине, важнейшей частью которой является
+                непрерывно движущаяся (как транспортер) металлическая или капроновая сетка.
+            </p>
         </div>
     </section>
-    <section>
+    <section class="section-3">
         <div>
-            <img src="./assets/img/Frame 208.png" alt="Упаковка">
-            <h3>Упаковка</h3>
-            <span>Тираж: от 50 штук</span>
-            <p>Сделано из крафт-бумаги или плотного картона. Упаковки имеют различные формы и расцветки, изготовим форму
+            <img class="section-3-img" src="./assets/img/Frame208.png" alt="Упаковка">
+            <h3 class="h3">Упаковка</h3>
+            <span class="section-3-span">Тираж: от 50 штук</span>
+            <p class="text-description">Сделано из крафт-бумаги или плотного картона. Упаковки имеют различные формы и расцветки, изготовим форму
                 под заказ.</p>
-            <button>Подробнее<img src="./assets/img/Arrow 1.svg"></button>
+            <button class="section-button">Подробнее<img src="./assets/img/Arrow1.svg" alt="Подробнее"></button>
         </div>
         <div>
-            <img src="./assets/img/Frame 209.png" alt="Пакеты">
-            <h3>Пакеты</h3>
-            <span>Тираж: от 200 штук</span>
-            <p>С прямоугольным дном. От 10 см до 60 см по высоте. Материалы: картон, крафт-бумага. Различные расцветки
-                и дизайн.</p>
-            <button>Подробнее<img src="./assets/img/Arrow 1.svg"></button>
+            <img class="section-3-img" src="./assets/img/Frame209.png" alt="Пакеты">
+            <h3 class="h3">Пакеты</h3>
+            <span class="section-3-span">Тираж: от 200 штук</span>
+            <p class="text-description">С прямоугольным дном. От 10 см до 60 см по высоте. Материалы: картон, крафт-бумага. Различные расцветки
+                и дизайн.</p>
+            <button class="section-button">Подробнее <img src="./assets/img/Arrow1.svg" alt="Подробнее"> </button>
         </div>
         <div>
-            <img src="./assets/img/Frame 211.png" alt="Кейсы">
-            <h3>Кейсы</h3>
-            <span>Тираж: от 30 штук</span>
-            <p>Подойдет для документов и других бумаг. Различные расцветки, размеры и плотность. Материал: прессованная
+            <img class="section-3-img" src="./assets/img/Frame211.png" alt="Кейсы">
+            <h3 class="h3">Кейсы</h3>
+            <span class="section-3-span">Тираж: от 30 штук</span>
+            <p class="text-description">Подойдет для документов и других бумаг. Различные расцветки, размеры и плотность. Материал: прессованная
                 бумага.</p>
-            <button>Подробнее<img src="./assets/img/Arrow 1.svg"></button>
+            <button class="section-button">Подробнее <img src="./assets/img/Arrow1.svg" alt="Подробнее"> </button>
         </div>
         <div>
-            <img src="./assets/img/Frame 210.png" alt="Другие изделия">
-            <h3>Другие изделия</h3>
-            <span>Тираж: от 100 штук</span>
-            <p>Нестандартные упаковки, кейсы и другие изделия различных размеров и конфигураций. Изготовим в кратчайшие
+            <img class="section-3-img" src="./assets/img/Frame210.png" alt="Другие изделия">
+            <h3 class="h3">Другие изделия</h3>
+            <span class="section-3-span">Тираж: от 100 штук</span>
+            <p class="text-description">Нестандартные упаковки, кейсы и другие изделия различных размеров и конфигураций. Изготовим в кратчайшие
                 сроки.</p>
-            <button>Подробнее<img src="./assets/img/Arrow 1.svg"></button>
+            <button class="section-button">Подробнее <img src="./assets/img/Arrow1.svg" alt="Подробнее"> </button>
         </div>
     </section>
-    <section>
+    <section class="section-4">
         <div>
             <div>
-                <img src="./assets/img/hahnemuehle-logo-vector 1.png" alt="Картинка-1">
+                <img src="./assets/img/hahnemuehle-logo-vector1.png" alt="Картинка-1">
             </div>
         </div>
         <div>
             <div>
-                <img src="./assets/img/Frame 225.png" alt="Картинка-2">
+                <img src="./assets/img/Frame225.png" alt="Картинка-2">
             </div>
         </div>
         <div>
             <div>
-                <img src="./assets/img/royal-talens-bv-logo-vector 1.png" alt="Картинка-3">
+                <img src="./assets/img/royal-talens-bv-logo-vector1.png" alt="Картинка-3">
             </div>
         </div>
         <div>
@@ -109,18 +121,19 @@
     <section>
         <div>
             <h2>Simple скетчбук</h2>
-            <p>80 листов, твердая обложка, бумага  Fabriano 200 г/м2. Подойдет и для графики и для акварели. Для самых смелых творческих замыслов!</p>
+            <p>80 листов, твердая обложка, бумага Fabriano 200 г/м2. Подойдет и для графики и для акварели. Для самых
+                смелых творческих замыслов!</p>
             <button>Купить</button>
         </div>
         <img src="./assets/img/pic.png" alt="Скэтчбук">
     </section>
     <footer>
-        <img src="./assets/img/Frame 85.svg" alt="logo">
+        <img src="./assets/img/Frame85.svg" alt="logo">
         <ul>
-            <li><a href=""><img src="./assets/img/Vector-4.svg"></a></li>
-            <li><a href=""><img src="./assets/img/Vector.svg"></a></li>
-            <li><a href=""><img src="./assets/img/Vector-2.svg"></a></li>
-            <li><a href=""><img src="./assets/img/Vector-3.svg"></a></li>
+            <li><a href=""><img src="./assets/img/Vector-4.svg" alt="ссылка"></a></li>
+            <li><a href=""><img src="./assets/img/Vector.svg" alt="ссылка"></a></li>
+            <li><a href=""><img src="./assets/img/Vector-2.svg" alt="ссылка"></a></li>
+            <li><a href=""><img src="./assets/img/Vector-3.svg" alt="ссылка"></a></li>
         </ul>
     </footer>
 </body>
