--- a/index.html
+++ b/index.html
@@ -17,124 +17,153 @@
 
 <body>
     <header class="header">
-        <img src="./assets/img/Frame85.svg" alt="logo">
-        <ul>
-            <li><a class="header-link" href="">Продукция</a></li>
-            <li><a class="header-link" href="">Материалы</a></li>
-            <li><a class="header-link" href="">О нас</a></li>
-            <li><a class="header-link" href="">Контакты</a></li>
-        </ul>
-    </header>
-    <section class="section-1">
-        <h1 class="h1">Простые вещи. <br> Из бумаги</h1>
-        <p class="text">Бума́га (предположительно от итал. bombagia, первоисточником же считается иранский) —
-            волокнистый материал с минеральными добавками.</p>
-        <button class="header-button">Каталог</button>
-        <img class="img-section-1" src="./assets/img/Layer2copy.png" alt="Картинка">
-    </section>
-    <section class="section-2">
-        <div class="top-section">
-            <div class="section-list">
-                <img class="section-img" src="./assets/img/BuissnesCardsv2(85x55).png" alt="Бизнес-карточка-1">
-                <span class="main-span">V.1</span>
-                <span class="title-span">Результат вашего обучения</span>
-            </div>
-            <div class="section-list">
-                <img class="section-img" src="./assets/img/BuissnesCardsv6(85x55)1.png" alt="Бизнес-карточка-2">
-                <span class="main-span">V.2</span>
-                <span class="title-span">Результат вашего обучения</span>
-            </div>
-            <div class="section-list">
-                <img class="section-img" src="./assets/img/BuissnesCardsv5(85x55)1.png" alt="Бизнес-карточка-3">
-                <span class="main-span">V.3</span>
-                <span class="title-span">Результат вашего обучения</span>
+        <div class="container">
+            <div class="header-wrapper">
+                <img src="./assets/img/Frame85.svg" alt="logo">
+                <ul class="menu">
+                    <li><a class="header-link" href="">Продукция</a></li>
+                    <li><a class="header-link" href="">Материалы</a></li>
+                    <li><a class="header-link" href="">О нас</a></li>
+                    <li><a class="header-link" href="">Контакты</a></li>
+                </ul>
             </div>
         </div>
-        <div>
-            <img class="section-main-img" src="./assets/img/Folderv8Open1.png" alt="Большая картинка">
-            <h2 class="h2">Максимальная белизна</h2>
-            <p class="text">
-                Для повышения белизны, гладкости и мягкости в состав бумажной массы вводят белые минеральные вещества:
-                мел, тальк, каолин и др. Эта операция называется наполнением.
-                <br>
-                Отлив бумажного листа осуществляют на бумагоделательной машине, важнейшей частью которой является
-                непрерывно движущаяся (как транспортер) металлическая или капроновая сетка.
-            </p>
+    </header>
+    <section class="section-1">
+        <div class="container">
+            <div class="main-wrapper">
+                <div class="main-info">
+                    <h1 class="h1">Простые вещи. <br> Из бумаги</h1>
+                    <p class="text">Бума́га (предположительно от итал. bombagia, первоисточником же считается иранский) —
+                        волокнистый материал с минеральными добавками.</p>
+                    <button class="button">Каталог</button>
+                </div>
+                <img class="img-section-1" src="./assets/img/Layer2copy.png" alt="Картинка">
+            </div>
+        </div>
+    </section>
+    <section class="section-2">
+        <div class="container">
+            <div class="top-section">
+                <div class="section-list">
+                    <img class="section-img" src="./assets/img/BuissnesCardsv2(85x55).png" alt="Бизнес-карточка-1">
+                    <span class="main-span">V.1</span>
+                    <span class="title-span">Результат вашего обучения</span>
+                </div>
+                <div class="section-list">
+                    <img class="section-img" src="./assets/img/BuissnesCardsv6(85x55)1.png" alt="Бизнес-карточка-2">
+                        <span class="main-span">V.2</span>
+                        <span class="title-span">Результат вашего обучения</span>
+                </div>
+                <div class="section-list">
+                    <img class="section-img" src="./assets/img/BuissnesCardsv5(85x55)1.png" alt="Бизнес-карточка-3">
+                    <span class="main-span">V.3</span>
+                    <span class="title-span">Результат вашего обучения</span>
+                </div>
+            </div>
+            <div class="wrapper-section-2">
+                <img class="section-main-img" src="./assets/img/Folderv8Open1.png" alt="Большая картинка">
+                <div class="text-wrapper">
+                    <h2 class="h2">Максимальная белизна</h2>
+                    <p class="text">
+                        Для повышения белизны, гладкости и мягкости в состав бумажной массы вводят белые минеральные вещества:
+                        мел, тальк, каолин и др. Эта операция называется наполнением.
+                        <br>
+                        Отлив бумажного листа осуществляют на бумагоделательной машине, важнейшей частью которой является
+                        непрерывно движущаяся (как транспортер) металлическая или капроновая сетка.
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
     <section class="section-3">
-        <div>
-            <img class="section-3-img" src="./assets/img/Frame208.png" alt="Упаковка">
-            <h3 class="h3">Упаковка</h3>
-            <span class="section-3-span">Тираж: от 50 штук</span>
-            <p class="text-description">Сделано из крафт-бумаги или плотного картона. Упаковки имеют различные формы и расцветки, изготовим форму
-                под заказ.</p>
-            <button class="section-button">Подробнее<img src="./assets/img/Arrow1.svg" alt="Подробнее"></button>
-        </div>
-        <div>
-            <img class="section-3-img" src="./assets/img/Frame209.png" alt="Пакеты">
-            <h3 class="h3">Пакеты</h3>
-            <span class="section-3-span">Тираж: от 200 штук</span>
-            <p class="text-description">С прямоугольным дном. От 10 см до 60 см по высоте. Материалы: картон, крафт-бумага. Различные расцветки
-                и дизайн.</p>
-            <button class="section-button">Подробнее <img src="./assets/img/Arrow1.svg" alt="Подробнее"> </button>
-        </div>
-        <div>
-            <img class="section-3-img" src="./assets/img/Frame211.png" alt="Кейсы">
-            <h3 class="h3">Кейсы</h3>
-            <span class="section-3-span">Тираж: от 30 штук</span>
-            <p class="text-description">Подойдет для документов и других бумаг. Различные расцветки, размеры и плотность. Материал: прессованная
-                бумага.</p>
-            <button class="section-button">Подробнее <img src="./assets/img/Arrow1.svg" alt="Подробнее"> </button>
-        </div>
-        <div>
-            <img class="section-3-img" src="./assets/img/Frame210.png" alt="Другие изделия">
-            <h3 class="h3">Другие изделия</h3>
-            <span class="section-3-span">Тираж: от 100 штук</span>
-            <p class="text-description">Нестандартные упаковки, кейсы и другие изделия различных размеров и конфигураций. Изготовим в кратчайшие
-                сроки.</p>
-            <button class="section-button">Подробнее <img src="./assets/img/Arrow1.svg" alt="Подробнее"> </button>
+        <div class="container">
+            <div class="wrapper-section-3">
+                <div>
+                    <img class="section-3-img" src="./assets/img/Frame208.png" alt="Упаковка">
+                    <h3 class="h3">Упаковка</h3>
+                    <span class="section-3-span">Тираж: от 50 штук</span>
+                    <p class="text-description">Сделано из крафт-бумаги или плотного картона. Упаковки имеют различные формы и расцветки, изготовим форму
+                        под заказ.</p>
+                    <button class="section-button">Подробнее<img src="./assets/img/Arrow1.svg" alt="Подробнее"></button>
+                </div>
+                <div>
+                    <img class="section-3-img" src="./assets/img/Frame209.png" alt="Пакеты">
+                    <h3 class="h3">Пакеты</h3>
+                    <span class="section-3-span">Тираж: от 200 штук</span>
+                    <p class="text-description">С прямоугольным дном. От 10 см до 60 см по высоте. Материалы: картон, крафт-бумага. Различные расцветки
+                        и дизайн.</p>
+                    <button class="section-button">Подробнее <img src="./assets/img/Arrow1.svg" alt="Подробнее"> </button>
+                </div>
+                <div>
+                    <img class="section-3-img" src="./assets/img/Frame211.png" alt="Кейсы">
+                    <h3 class="h3">Кейсы</h3>
+                    <span class="section-3-span">Тираж: от 30 штук</span>
+                    <p class="text-description">Подойдет для документов и других бумаг. Различные расцветки, размеры и плотность. Материал: прессованная
+                        бумага.</p>
+                    <button class="section-button">Подробнее <img src="./assets/img/Arrow1.svg" alt="Подробнее"> </button>
+                </div>
+                <div>
+                    <img class="section-3-img" src="./assets/img/Frame210.png" alt="Другие изделия">
+                    <h3 class="h3">Другие изделия</h3>
+                    <span class="section-3-span">Тираж: от 100 штук</span>
+                    <p class="text-description">Нестандартные упаковки, кейсы и другие изделия различных размеров и конфигураций. Изготовим в кратчайшие
+                        сроки.</p>
+                    <button class="section-button">Подробнее <img src="./assets/img/Arrow1.svg" alt="Подробнее"> </button>
+                </div>
+            </div>
         </div>
     </section>
     <section class="section-4">
-        <div>
-            <div>
-                <img src="./assets/img/hahnemuehle-logo-vector1.png" alt="Картинка-1">
-            </div>
-        </div>
-        <div>
-            <div>
-                <img src="./assets/img/Frame225.png" alt="Картинка-2">
-            </div>
-        </div>
-        <div>
-            <div>
-                <img src="./assets/img/royal-talens-bv-logo-vector1.png" alt="Картинка-3">
-            </div>
-        </div>
-        <div>
-            <div>
-                <img src="./assets/img/Frame.png" alt="Картинка-4">
+        <div class="container">
+            <div class="wrapper-section-4">
+                <div>
+                    <div class="section-4-list">
+                        <img src="./assets/img/hahnemuehle-logo-vector1.png" alt="Картинка-1">
+                    </div>
+                </div>
+                <div>
+                    <div class="section-4-list">
+                        <img src="./assets/img/Frame225.png" alt="Картинка-2">
+                    </div>
+                </div>
+                <div>
+                    <div class="section-4-list">
+                        <img src="./assets/img/royal-talens-bv-logo-vector1.png" alt="Картинка-3">
+                    </div>
+                </div>
+                <div>
+                    <div class="section-4-list">
+                        <img src="./assets/img/Frame.png" alt="Картинка-4">
+                    </div>
+                </div>
             </div>
         </div>
     </section>
-    <section>
-        <div>
-            <h2>Simple скетчбук</h2>
-            <p>80 листов, твердая обложка, бумага Fabriano 200 г/м2. Подойдет и для графики и для акварели. Для самых
-                смелых творческих замыслов!</p>
-            <button>Купить</button>
+    <section class="section-5">
+        <div class="container">
+            <div class="wrapper-section-5">
+                <div>
+                    <h2 class="section-5-h2">Simple скетчбук</h2>
+                    <p class="text">80 листов, твердая обложка, бумага Fabriano 200 г/м2. Подойдет и для графики и для акварели. Для самых смелых творческих замыслов!</p>
+                    <button class="button">Купить</button>
+                </div>
+                <img class="img-section-5" src="./assets/img/pic.png" alt="Скэтчбук"> 
+            </div>         
         </div>
-        <img src="./assets/img/pic.png" alt="Скэтчбук">
     </section>
-    <footer>
-        <img src="./assets/img/Frame85.svg" alt="logo">
-        <ul>
-            <li><a href=""><img src="./assets/img/Vector-4.svg" alt="ссылка"></a></li>
-            <li><a href=""><img src="./assets/img/Vector.svg" alt="ссылка"></a></li>
-            <li><a href=""><img src="./assets/img/Vector-2.svg" alt="ссылка"></a></li>
-            <li><a href=""><img src="./assets/img/Vector-3.svg" alt="ссылка"></a></li>
-        </ul>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-wrapper">
+                <img src="./assets/img/Frame885.svg" alt="logo">
+                <ul class="footer-menu">
+                    <li><a href=""><img src="./assets/img/Vector-4.svg" alt="ссылка"></a></li>
+                    <li><a href=""><img src="./assets/img/Vector.svg" alt="ссылка"></a></li>
+                    <li><a href=""><img src="./assets/img/Vector-2.svg" alt="ссылка"></a></li>
+                    <li><a href=""><img src="./assets/img/Vector-3.svg" alt="ссылка"></a></li>
+                </ul>
+            </div>
+        </div>
     </footer>
 </body>
 
